es: islands traslated

--- a/src/content/docs/es/tutorial/6-islands/1.mdx
+++ b/src/content/docs/es/tutorial/6-islands/1.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: Build your first Astro island
+title: Construye tu primera Astro isla
 description: |-
-  Tutorial: Build your first Astro blog —
-  Use a Preact component to greet your visitors with a randomly-selected message
+  Tutorial: Crea tu primer blog Astro —
+  Utilice un componente Preact para saludar a sus visitantes con un mensaje seleccionado al azar.
 ---
 import Box from '~/components/tutorial/Box.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -13,36 +13,36 @@ import Option from '~/components/tutorial/Option.astro';
 import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
- Use a Preact component to greet your visitors with a randomly-selected welcome message!
+ Utilice un componente Preact para recibir a sus visitantes con un mensaje de bienvenida seleccionado al azar.
 
 <PreCheck>
-  - Add Preact to your Astro project
-  - Include Astro islands (Preact `.jsx` components) on your home page
-  - Use `client:` directives to make islands interactive
+  - Añada Preact a su proyecto Astro
+  - Incluya islas Astro (componentes `.jsx` de Preact) en su página de inicio
+  - Utilice las directivas `client:` para que las islas sean interactivas
 </PreCheck>
 
-## Add Preact to your Astro project
+## Añada Preact a su proyecto Astro
 
-1. If it’s running, quit the dev server to have access to the terminal (keyboard shortcut: <kbd>Ctrl + C</kbd>).
+1. Si se está ejecutando, salga del servidor de desarrollo para acceder al terminal (método abreviado de teclado: <kbd>Ctrl + C</kbd>).
 
-2. Add the ability to use Preact components in your Astro project with a single command:
+2. Añade la posibilidad de utilizar componentes Preact en tu proyecto Astro con un solo comando:
 
     ```shell
     npx astro add preact
     ```
 
-2. Follow the command line instructions to confirm adding Preact to your project.
+2. Siga las instrucciones de la línea de comandos para confirmar la adición de Preact a su proyecto.
  
 
-## Include a Preact greeting banner
+## Incluir un banner de felicitación Preact
 
-This component will take an array of greeting messages as a prop and randomly select one of them to show as a welcome message. The user can click a button to get a new random message.
+Este componente tomará un array de mensajes de bienvenida como props y seleccionará aleatoriamente uno de ellos para mostrarlo como mensaje de bienvenida. El usuario puede hacer clic en un botón para obtener un nuevo mensaje aleatorio.
 
-1. Create a new file in `src/components/` named `Greeting.jsx`
+1. Crea un nuevo fichero en `src/components/` llamado `Greeting.jsx`.
 
-    Note the `.jsx` file extension. This file will be written in Preact, not Astro.
+    Tenga en cuenta la extensión de archivo `.jsx`. Este archivo se escribirá en Preact, no en Astro.
 
-2. Add the following code to `Greeting.jsx`:
+2. Añade el siguiente código a `Greeting.jsx`:
 
     ```jsx title="src/components/Greeting.jsx"
     import { h } from 'preact';
@@ -56,16 +56,16 @@ This component will take an array of greeting messages as a prop and randomly se
 
       return (
         <div> 
-          <h3>{greeting}! Thank you for visiting!</h3>
+          <h3>{greeting}!Gracias por su visita¡.</h3>
           <button onClick={() => setGreeting(randomMessage())}>
-            New Greeting
+            Nuevo saludo
           </button>
         </div>
       );
     }
     ```
 
-3. Import and use this component on your Home page `index.astro`.
+3. Importe y utilice este componente en su página de inicio `index.astro`.
 
     ```astro title="src/pages/index.astro" ins={3,8}
     ---
@@ -74,12 +74,12 @@ This component will take an array of greeting messages as a prop and randomly se
     const pageTitle = "Home Page";
     ---
     <BaseLayout pageTitle={pageTitle}>
-      <h2>My awesome blog subtitle</h2>
-      <Greeting messages={["Hi", "Hello", "Howdy", "Hey there"]} />
+      <h2>El impresionante subtítulo de mi blog</h2>
+      <Greeting messages={["Hola", "Qué tal", "Hola a todos"]} />
     </BaseLayout>
     ```
 
-    Check the preview in your browser: you should see a random greeting, but the button won't work!
+    Comprueba la vista previa en tu navegador: deberías ver un saludo aleatorio, ¡pero el botón no funcionará!
 
 
 4. Add a second `<Greeting />` component with the `client:load` directive.
@@ -91,15 +91,15 @@ This component will take an array of greeting messages as a prop and randomly se
     const pageTitle = "Home Page";
     ---
     <BaseLayout pageTitle={pageTitle}>
-      <h2>My awesome blog subtitle</h2>
-      <Greeting messages={["Hi", "Hello", "Howdy", "Hey there"]} />
+      <h2>El impresionante subtítulo de mi blog</h2>
+      <Greeting messages={["Hola", "Qué tal", "Hola a todos"]} />
       <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
     </BaseLayout>
     ```
 
-  5. Revisit your page and compare the two components. The second button works because the `client:load` directive tells Astro to send and rerun its JavaScript to the _client_ when the page _loads_, making the component interactive. We call this a **hydrated** component.
+  5. Vuelve a visitar tu página y compara los dos componentes. El segundo botón funciona porque la directiva `client:load` le dice a Astro que envíe y vuelva a ejecutar su JavaScript al _client_ cuando la página _loads_, haciendo que el componente sea interactivo. A esto lo llamamos un componente **hidratado**.
   
-  6. Once the difference is clear, remove the non-hydrated Greeting component.
+  6. Una vez que la diferencia sea clara, retire el componente de saludo no hidratado.
 
 
       ```astro title="src/pages/index.astro" del={8} "client:load"
@@ -109,19 +109,19 @@ This component will take an array of greeting messages as a prop and randomly se
       const pageTitle = "Home Page";
       ---
       <BaseLayout pageTitle={pageTitle}>
-        <h2>My awesome blog subtitle</h2>
-        <Greeting messages={["Hi", "Hello", "Howdy", "Hey there"]} />
+        <h2>El impresionante subtítulo de mi blog</h2>
+        <Greeting messages={["Hola", "Qué tal", "Hola a todos"]} />
         <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
       </BaseLayout>
       ```
 
 <Box icon="question-mark">
 
-### Analyze the Pattern
+### Analizar el patrón
 
-There are other `client:` directives to explore. Each sends the JavaScript to the client at a different time. `client:visible`, for example, will only send the component's JavaScript when it is visible on the page.
+Hay otras directivas `client:` para explorar. Cada una envía el JavaScript al cliente en un momento diferente. Por ejemplo, `client:visible` sólo enviará el JavaScript del componente cuando sea visible en la página.
 
-Consider an Astro component with the following code:
+Considere un componente Astro con el siguiente código:
 
 ```astro
 ---
@@ -139,22 +139,22 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
 </BaseLayout>
 ```
 
-1. Which of the five components will be **hydrated** islands, sending JavaScript to the client?
+1. ¿Cuál de los cinco componentes islas se **hidratará**, enviando JavaScript al cliente?
 
     <p>
-      <Spoiler>`<PreactBanner client:load />` and `<SvelteCounter client:visible />` will be hydrated islands.</Spoiler>
+      <Spoiler>`<PreactBanner client:load />` and `<SvelteCounter client:visible />` serán islas hidratadas.</Spoiler>
     </p>
 
-2. In what way(s) will the two `<PreactBanner />` components be the same? In what way(s) will they be different? 
+2. ¿En qué se parecen los dos componentes `<PreactBanner />`? ¿En qué se diferenciarán? 
 
     <p>
-      <Spoiler>**Same**: They both show the same HTML elements and look the same initially. **Different**: The component with the `client:load` directive will rerender after the page is loaded, and any interactive elements that it has will work.</Spoiler>
+      <Spoiler>**Iguales**: Ambos muestran los mismos elementos HTML y tienen el mismo aspecto inicial. **Diferentes**: El componente con la directiva `client:load` se renderizará después de cargar la página, y cualquier elemento interactivo que tenga funcionará.</Spoiler>
     </p>
 
-3. Assume the `SvelteCounter` component shows a number and has a button to increase it. If you couldn't see your website's code, only the live published page, how would you tell which of the two `<SvelteCounter />` components used `client:visible`? 
+3. Supongamos que el componente `SvelteCounter` muestra un número y tiene un botón para aumentarlo. Si no pudieras ver el código de tu sitio web, sólo la página publicada en directo, ¿cómo sabrías cuál de los dos componentes `<SvelteCounter />` utiliza `client:visible`? 
 
     <p>
-      <Spoiler>Try clicking the button, and see which one is interactive. If it responds to your input, it must have had a `client:` directive.</Spoiler>
+      <Spoiler>Pruebe a pulsar el botón y vea cuál es el interactivo. Si responde a su entrada, debe haber tenido una directiva `client:`.</Spoiler>
     </p>
 </Box>
 
@@ -162,18 +162,18 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-For each of the following components, identify what will be sent to the browser:
+Para cada uno de los siguientes componentes, identifique lo que se enviará al navegador:
 
 1. `<ReactCounter client:load/>`
 
     <MultipleChoice>
       <Option>
-        HTML and CSS only
+        Sólo HTML y CSS
       </Option>
       <Option isCorrect>
-        HTML, CSS, and JavaScript
+        HTML, CSS y JavaScript
       </Option>
     </MultipleChoice>
 
@@ -181,10 +181,10 @@ For each of the following components, identify what will be sent to the browser:
 
     <MultipleChoice>
       <Option  isCorrect>
-        HTML and CSS only
+        Sólo HTML y CSS
       </Option>
       <Option>
-        HTML, CSS, and JavaScript
+        HTML, CSS y JavaScript
       </Option>
     </MultipleChoice>
 </Box>
@@ -194,16 +194,16 @@ For each of the following components, identify what will be sent to the browser:
 ## Checklist
 
 <Checklist>
-- [ ] I can install an Astro integration.
-- [ ] I can write UI framework components in their own language.
-- [ ] I can use a `client:` directive for hydration on my UI framework component.
+- [ ] Puedo instalar una integración Astro.
+- [ ] Puedo escribir componentes de UI framework en su propio lenguaje.
+- [ ] Puedo utilizar una directiva `client:` para la hidratación en mi componente del framework UI.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [Astro Integrations Guide](/en/guides/integrations-guide/)
+- [Guía de integraciones Astro](/en/guides/integrations-guide/)
 
-- [Using UI Framework Components in Astro](/en/core-concepts/framework-components/#using-framework-components)
+- [Uso de componentes de UI Framework en Astro](/en/core-concepts/framework-components/#using-framework-components)
 
-- [Astro client directives reference](/en/reference/directives-reference/#client-directives)
+- [Referencia de las directivas del cliente Astro](/en/reference/directives-reference/#client-directives)
