--- a/src/content/docs/es/tutorial/6-islands/2.mdx
+++ b/src/content/docs/es/tutorial/6-islands/2.mdx
@@ -1,9 +1,9 @@
 ---
 type: tutorial
-title: 'Back on dry land. Take your blog from day to night, no island required!'
+title: 'De vuelta a tierra firme. Lleva tu blog del día a la noche, ¡sin necesidad de isla!'
 description: |-
-  Tutorial: Build your first Astro blog —
-  Build a light/dark theme toggle using only JavaScript and CSS
+  Tutorial: Crea tu primer blog Astro —
+  Crea un toggle de tema claro/oscuro utilizando sólo JavaScript y CSS
 ---
 import Box from '~/components/tutorial/Box.astro';
 import Checklist from '~/components/Checklist.astro';
@@ -13,18 +13,18 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 
-Now that you can build Astro islands for interactive elements, don't forget that you can go pretty far with just vanilla JavaScript and CSS!
+Ahora que ya puedes construir islas Astro para elementos interactivos, no olvides que puedes llegar muy lejos con sólo JavaScript y CSS.
 
-Let's build a clickable icon to let your users toggle between light or dark mode using another `<script>` tag for interactivity... with no framework JavaScript sent to the browser.
+Vamos a crear un icono en el que se pueda hacer clic para que los usuarios puedan togglear entre los modos claro y oscuro utilizando otra etiqueta `<script>` para la interactividad... sin enviar JavaScript al navegador.
 
 <PreCheck>
-  - Build an interactive theme toggle with only JavaScript and CSS
-  - Send as little JavaScript to the browser as possible!
+  - Cree un toggle interactivo con sólo JavaScript y CSS
+  - Envíe la menor cantidad posible de JavaScript al navegador.
 </PreCheck>
 
-## Add and style a theme toggle icon
+## Añadir y estilizar un icono toggle temático
 
-1. Create a new file at `src/components/ThemeIcon.astro` and paste the following code into it:
+1. Crea un nuevo archivo en `src/components/ThemeIcon.astro` y pega el siguiente código en él:
 
     ```astro title="src/components/ThemeIcon.astro"
     ---
@@ -50,7 +50,7 @@ Let's build a clickable icon to let your users toggle between light or dark mode
     </style>
     ```
 
-2. Add the icon to `Header.astro` so that it will be displayed on all pages. Don't forget to import the component.
+2. Añade el icono a `Header.astro` para que se muestre en todas las páginas. No olvides importar el componente.
 
      ```astro title="src/components/Header.astro" ins={4,9}
     ---
@@ -67,13 +67,13 @@ Let's build a clickable icon to let your users toggle between light or dark mode
     </header>
     ```
 
-3. Visit your browser preview at `localhost:3000` to see the icon now on all your pages. You can try clicking it, but you have not written a script to make it interactive yet.
+3. Visita la vista previa de tu navegador en `localhost:3000` para ver el icono ahora en todas tus páginas. Puede intentar hacer clic en él, pero aún no ha escrito un script para hacerlo interactivo.
 
-## Add CSS styling for a dark theme
+## Añadir estilos CSS para un tema oscuro
 
-Choose some alternate colors to use in dark mode.
+Elige algunos colores alternativos para usar en modo oscuro.
 
-1. In `global.css`, define some dark styles. You can choose your own, or copy and paste:
+1. En `global.css`, define algunos estilos oscuros. Usted puede elegir su propio, o copiar y pegar:
 
     ```css title="src/styles/global.css"
     html.dark {
@@ -86,11 +86,11 @@ Choose some alternate colors to use in dark mode.
     }
     ```
 
-## Add client-side interactivity
+## Añadir interactividad en el lado del cliente
 
-To add interactivity to an Astro component, you can use a `<script>` tag. This script can check and set the current theme from `localStorage` and toggle the theme when the icon is clicked. 
+Para añadir interactividad a un componente Astro, puede utilizar una etiqueta `<script>`. Este script puede comprobar y establecer el tema actual desde `localStorage` y toggle el tema cuando se hace clic en el icono. 
 
-1. Add the following `<script>` tag in `src/components/ThemeIcon.astro` after your `<style>` tag:
+1. Añade la siguiente etiqueta `<script>` en `src/components/ThemeIcon.astro` después de tu etiqueta `<style>`:
 
     ```astro title="src/components/ThemeIcon.astro" ins={9-37}
     <style>
@@ -132,83 +132,83 @@ To add interactivity to an Astro component, you can use a `<script>` tag. This s
     </script>
     ```
 
-2. Check your browser preview at `localhost:3000` and click the theme icon. Verify that you can change between light and dark modes.
+2. Comprueba la vista previa de tu navegador en `localhost:3000` y haz clic en el icono del tema. Comprueba que puedes cambiar entre los modos claro y oscuro.
 
 
 
 <Box icon="question-mark">
 
-### Test your knowledge
+### Pon a prueba tus conocimientos
 
-Choose whether each of the following statements describes Astro `<script>` tags, UI framework components, or both.
+Elige si cada una de las siguientes afirmaciones describe etiquetas Astro `<script>`, componentes del framework UI, o ambos.
 
-1. They allow you to include interactive UI elements on your website.
+1. Le permiten incluir elementos de UI interactivos en su sitio web.
 
     <MultipleChoice>
       <Option>
-        Astro `<script>` tags
+        Etiquetas Astro `<script>`.
       </Option>
       <Option>
-        UI framework components
+        Componentes del framework UI
       </Option>
       <Option isCorrect>
-        both
+        ambos
       </Option>
     </MultipleChoice>
 
-2. They will create static elements on your site unless you include a `client:` to send their JavaScript to the client and run in the browser.
+2. Crearán elementos estáticos en su sitio a menos que incluya un `client:` para enviar su JavaScript al cliente y ejecutarlo en el navegador.
 
     <MultipleChoice>
       <Option>
-        Astro `<script>` tags
+        Etiquetas Astro `<script>`.
       </Option>
       <Option isCorrect>
-        UI framework components
+        Componentes del framework UI
       </Option>
       <Option>
-        both
+        ambos
       </Option>
     </MultipleChoice>
 
-3. They allow you to "try out" a new framework without requiring you to start an entirely new project using that tech stack.
+3. Permiten "probar" un nuevo framework sin necesidad de iniciar un proyecto completamente nuevo con esa pila tecnológica.
 
     <MultipleChoice>
       <Option>
-        Astro `<script>` tags
+        Etiquetas Astro `<script>`.
       </Option>
       <Option isCorrect>
-        UI framework components
+        Componentes del framework UI
       </Option>
       <Option>
-        both
+        ambos
       </Option>
     </MultipleChoice>
 
-4. They allow you to reuse code you have written in other frameworks and you can often just drop them right into your site.
+4. Permiten reutilizar el código que se ha escrito en otros frameworks y, a menudo, basta con soltarlos directamente en el sitio.
 
     <MultipleChoice>
       <Option>
-        Astro `<script>` tags
+        Etiquetas Astro `<script>`.
       </Option>
       <Option isCorrect>
-        UI framework components
+        Componentes del framework UI
       </Option>
       <Option>
-        both
+        ambos
       </Option>
     </MultipleChoice>
 
-5. They allow you to add interactivity without needing to know or learn any other JavaScript frameworks.
+5. Permiten añadir interactividad sin necesidad de conocer o aprender otros frameworks de JavaScript.
 
     <MultipleChoice>
       <Option isCorrect>
-        Astro `<script>` tags
+        Etiquetas Astro `<script>`
       </Option>
       <Option>
-        UI framework components
+        Componentes del framework UI
       </Option>
       <Option>
-        both
+        ambos
       </Option>
     </MultipleChoice>
 </Box>
@@ -218,10 +218,10 @@ Choose whether each of the following statements describes Astro `<script>` tags,
 ## Checklist
 
 <Checklist>
-- [ ] I can use JavaScript for interactivity when I don't want to add a framework.
+- [ ] Puedo utilizar JavaScript para la interactividad cuando no quiero añadir un framework.
 </Checklist>
 </Box>
 
-### Resources
+### Recursos
 
-- [Client-side `<script>` in Astro](/en/guides/client-side-scripts/)
+- [Cliente `<script>` en Astro](/en/guides/client-side-scripts/)
