--- a/src/content/docs/es/tutorial/6-islands/3.mdx
+++ b/src/content/docs/es/tutorial/6-islands/3.mdx
@@ -1,11 +1,11 @@
 ---
 type: tutorial
-title: Congratulations!
+title: ¡Felicidades!
 description: >-
-  Tutorial: Build your first Astro blog —
+  Tutorial: Crea tu primer blog Astro —
 
-  Check out the final version of your project and find out what’s next with
-  Astro!
+  Echa un vistazo a la versión final de tu proyecto y descubre qué es lo próximo con
+  ¡Astro!
 ---
 import Badge from '~/components/Badge.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -15,12 +15,12 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 
 
-There's one more edit to make...
+Hay una edición más que hacer...
 
 ```astro title="src/pages/about.astro" del={5} ins={6}
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "About Me";
+const pageTitle = "Sobre mi";
 const happy = true;
 const finished = false;
 const finished = true;
@@ -28,39 +28,39 @@ const goal = 3;
 const identity = {
   firstName: "Sarah",
   country: "Canada",
-  occupation: "Technical Writer",
-  hobbies: ["photography", "birdwatching", "baseball"],
+  occupation: "Redactor técnico",
+  hobbies: ["fotografia", "observación de aves", "peñarol"],
 };
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 ```
 
-We hope you learned a little about the basics of Astro, and had fun along the way!
+Esperamos que hayas aprendido un poco sobre los fundamentos de Astro, ¡y que te hayas divertido por el camino!
 
 <StackblitzIntro tree="withastro/blog-tutorial-demo/tree/complete" compact />
 
-Check out our docs for guides and reference material, and visit our Discord to ask questions, get help or just hang out!
+Consulta nuestros documentos para obtener guías y material de referencia, y visita nuestro Discord para hacer preguntas, obtener ayuda o simplemente pasar el rato.
 
-Welcome to the universe, astronaut. 👩🏼‍🚀👨🏿‍🚀🧑‍🚀👩🏾‍🚀
+Bienvenido al universo, astronauta. 👩🏼‍🚀👨🏿‍🚀🧑‍🚀👩🏾‍🚀
 
 <Box icon="check-list">
 
 ## Checklist
 
 <Checklist>
-- [ ] I can't wait to start my next Astro project! 🚀
+- [ ] Estoy impaciente por empezar mi próximo proyecto Astro. 🚀
 </Checklist>
 </Box>
 
-## Next Steps
+## Próximos pasos
 
-Continue with our [guide to migrate this project to content collections](/en/guides/content-collections/#migrating-from-file-based-routing)
+Continúe con nuestra [guía para migrar este proyecto a colecciones de contenido](/en/guides/content-collections/#migrating-from-file-based-routing)
 
-[Start a new Astro project](/en/getting-started/)
+[Iniciar un nuevo proyecto Astro](/en/getting-started/)
 
-[Join us on Discord](https://astro.build/chat)
+[Únase a nosotros en Discord](https://astro.build/chat)
 
 <CompletionConfetti />
