--- a/src/content/docs/es/tutorial/6-islands/index.mdx
+++ b/src/content/docs/es/tutorial/6-islands/index.mdx
@@ -1,10 +1,10 @@
 ---
 type: tutorial
-unitTitle: Set sail for Astro islands
-title: 'Check in: Unit 6 - Astro Islands'
+unitTitle: Zarpar hacia las islas Astro
+title: 'Check in: Unidad 6 - Astro Islas'
 description: |-
-  Tutorial: Build your first Astro blog —
-  Use Astro islands to bring frontend framework components into your Astro site
+  Tutorial: Crea tu primer blog Astro —
+  Utiliza las islas Astro para incorporar componentes frontales a tu sitio Astro.
 ---
 import Badge from '~/components/Badge.astro';
 import Box from '~/components/tutorial/Box.astro';
@@ -14,20 +14,20 @@ import Option from '~/components/tutorial/Option.astro';
 import StackblitzIntro from '~/components/tutorial/StackblitzIntro.astro';
 
 
-Now that you have a fully functioning blog, let's add some interactive islands to your site!
+Ahora que ya tienes un blog en pleno funcionamiento, ¡vamos a añadir algunas islas interactivas a tu sitio!
 
-## Where are we now?
+## ¿Dónde estamos ahora?
 
 <StackblitzIntro tree="withastro/blog-tutorial-demo/tree/unit-6/start"/>
 
-## Where are we going?
+## ¿Adónde vamos?
 
-In this unit, you'll use **Astro islands** to bring frontend framework components into your Astro site. 
+En esta unidad, utilizarás **Astro islands** para introducir componentes de frontend framework en tu sitio Astro. 
 
-You will:
-- Add a UI framework, Preact, to your Astro project
-- Use Preact to create an interactive greeting component
-- Learn when you might _not_ choose islands for interactivity
+Lo harás:
+- Añade un marco de UI, Preact, a tu proyecto Astro
+- Utilice Preact para crear un componente de saludo interactivo
+- Sepa cuándo _no_ elegir islas para la interactividad
 
 
 <Box icon="check-list">
@@ -35,6 +35,6 @@ You will:
 ## Checklist
 
 <Checklist key ="interactivity">
-- [ ] I am ready to add some interactivity to my site, and start living that island life!
+- [ ] Estoy lista para añadir interactividad a mi sitio y empezar a vivir la vida isleña.
 </Checklist>
 </Box>
