feature: Update copy about Space

--- a/src/content/docs/en/guides/deploy/space.mdx
+++ b/src/content/docs/en/guides/deploy/space.mdx
@@ -7,7 +7,9 @@ i18nReady: true
 import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-[Deta Space](https://deta.space/developers) is a personal computer that lives in the cloud — a _‘personal cloud’_. You build an app on Space, they run it for millions of people anywhere. When users install an app, they get a personal copy. The data that app saves to their Space is for them: explore it, extend it, export it.
+[Deta Space](https://deta.space/developers) is a personal computer that lives in the cloud — a ‘personal cloud’. You can build and run apps for yourself in your own "Space". You can publish the apps you've built, and they'll run for people all around the world. 
+
+You can also install apps published by other devs. You'll get a personal copy of the app in your own cloud, running on your own infrastructure. All the data that all these apps save to your Space is for you: to explore, to extend, and to export, if you like.
 
 This guide includes step-by-step instructions for building sites in Space. You can build any type of Astro sites in Space: either a static site or a server-rendered site.
 
@@ -98,7 +100,7 @@ micros:
 ## Next steps
 
 - [Configure the public routes of your Space project](https://deta.space/docs/en/reference/spacefile#public_routes)
-- [Add more projects to your Space project](https://deta.space/docs/en/basics/micros)
+- [Add more compute to your Space project](https://deta.space/docs/en/basics/micros)
 - [Store data for your Space project](https://deta.space/docs/en/basics/data)
 - [Launch your Space app](https://deta.space/docs/en/basics/releases)
 
